# observability-rag-chatbot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  vector.yaml
kestra/: create_chunks_scripts.py  flow.yaml  populate_qdrant_script.py
logisense-chat/: index.html  package.json  tailwind.config.ts
logisense-chat/src/: index.css
logisense-chat/src/components/: ChatBubble.tsx  LogiSenseLogo.tsx  WelcomeScreen.tsx
logisense-chat/src/pages/: Chat.tsx
src/: main.py
