[project]
name = "observability-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "openai>=1.99.9",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
